--- a/src/app/App.css
+++ b/src/app/App.css
@@ -6,6 +6,22 @@
   color: white;
 }
 
+.animation_600 {
+  animation-timeline: view() !important;
+  animation-range: 0 600px !important;
+  scale: 0.8;
+  opacity: 0;
+  animation: fadeIn linear forwards;
+}
+
+.animation_300 {
+  animation-timeline: view() !important;
+  animation-range: 0 300px !important;
+  scale: 0.8;
+  opacity: 0;
+  animation: fadeIn linear forwards;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
